# plane-game

./: .gitignore  Animation.h  Application.h  BloomEffect.cpp  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresetsTemplate.json  CommandQueue.h  Component.h  Container.cpp  Container.h  EmitterNode.cpp  GameOverState.h  Label.cpp  MultiplayerGameState.cpp  NetworkNode.h  NetworkProtocol.cpp  Particle.h  PauseState.h  PlaneGame.sln  PlaneGame.vcxproj  Player.cpp  README.md  ResourceHolder.inl  ResourceIdentifiers.h  State.h  TextNode.h  Utility.cpp  World.cpp  World.h
.github/workflows/: cmake-linux.yml  cmake-vcpkg-build.yml  cmake-windows.yml  cmakebuild.yml  msbuild.yml
Media/Shaders/: Brightness.frag
PlaneGame/: Aircraft.cpp  Aircraft.h  Animation.cpp  Application.cpp  Application.h  BloomEffect.h  Button.cpp  Button.h  Category.h  Command.cpp  Command.h  CommandQueue.cpp  Component.cpp  DataTables.cpp  DataTables.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameOverState.cpp  GameOverState.h  GameServer.cpp  GameServer.h  GameState.cpp  GameState.h  KeyBinding.cpp  KeyBinding.h  Label.cpp  LoadingState.cpp  LoadingState.h  Main.cpp  MenuState.cpp  MenuState.h  MultiplayerGameState.cpp  MultiplayerGameState.h  MusicPlayer.cpp  MusicPlayer.h  NetworkNode.cpp  NetworkNode.h  NetworkProtocol.h  (+43 more)
include/: Container.h  EmitterNode.h  Entity.h  GameState.h  Label.h  MenuState.h  MultiplayerGameState.h  ParticleNode.h  Player.h  PostEffect.h  Projectile.h  ResourceHolder.h  ResourceHolder.inl  SettingsState.h  SoundPlayer.h  StateIdentifiers.h  StateStack.h  World.h
src/: Aircraft.cpp  Animation.cpp  BloomEffect.cpp  Command.cpp  Container.cpp  EmitterNode.cpp  GameOverState.cpp  GameServer.cpp  GameState.cpp  KeyBinding.cpp  Label.cpp  LoadingState.cpp  Main.cpp  MenuState.cpp  MultiplayerGameState.cpp  NetworkNode.cpp  ParallelTask.cpp  ParticleNode.cpp  PauseState.cpp  Player.cpp  PostEffect.cpp  Projectile.cpp  SceneNode.cpp  SettingsState.cpp  StateStack.cpp  Utility.cpp  World.cpp
